# ele

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: data-integrity-report.md  dify-system-prompt.md  system-prompt.md
docs/plans/: 2026-02-02-electric-simulation-db-design.md  2026-02-02-electric-simulation-db-impl.md  2026-02-03-dify-frontend-sms-design.md  2026-02-03-dify-frontend-sms-impl.md  2026-02-04-readable-pointid-dify-scenarios-design.md  2026-02-04-readable-pointid-impl.md  2026-02-05-data-retention-design.md  2026-02-05-data-retention-impl.md  2026-02-09-usage-analysis-tools-design.md  2026-03-09-openclaw-skill-design.md  2026-03-09-openclaw-skill-impl.md  2026-03-10-openclaw-alert-takeover-design.md  2026-03-10-openclaw-alert-takeover-impl.md
scripts/: init_db.sql
src/: config.py  main.py  scheduler.py
src/alert/: __init__.py  detector.py  feishu.py  rules.py  sms.py
src/api/: __init__.py  alerts.py  devices.py  electric.py
src/db/: __init__.py  connection.py  device_parser.py  init_data.py  maintenance.py  models.py
src/export/: csv_exporter.py
src/mcp/: __init__.py  server.py
src/simulator/: __init__.py  generator.py  profiles.py
tests/: conftest.py  test_alert.py  test_api_alerts.py  test_api_devices.py  test_api_electric.py  test_csv_exporter.py  test_device_parser.py  test_generator.py  test_init_data.py  test_integration.py  test_maintenance.py  test_mcp_tools.py
